<resources>
    <string name="app_name">Quiz Hunter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="enter_question">Enter Question</string>
    <string name="total_question">Total Question</string>
    <string name="play_again">Play Again</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
</resources>
