<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_two"
    tools:context="com.example.omarf.firstprojectdemo.Activity.SignInActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/quizhunter"
        android:layout_gravity="center" />
    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#fff"
        android:padding="7dp"
        android:layout_marginTop="10dp"
        android:hint="@string/user_name"
        android:textColorHint="#000"
        android:inputType="text"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:background="#fff"
        android:padding="7dp"
        android:textColorHint="#000"
        android:layout_marginTop="7dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/sign_in"
        android:onClick="onClickSignIn"
        android:layout_marginTop="20dp"
        android:background="#bce992"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="Sign Up"
        android:layout_marginTop="5dp"
        android:background="#849eef"
        android:onClick="onClickSignUp"/>

</LinearLayout>
