<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/result_one"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.omarf.firstprojectdemo.Activity.User.ResultActivity">

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Result"
        android:textSize="60sp"/>

    <TextView
        android:id="@+id/total_question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_text_view"
        android:layout_marginTop="35dp"
        android:text="@string/total_question"
        android:textSize="25sp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/total_question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total_question_tv"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/total_question_tv"
        android:text="5"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/total_answered_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_question_tv"
        android:layout_marginTop="15dp"
        android:text="Total Answered"
        android:textSize="25sp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/total_answered_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total_answered_tv"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/total_answered_tv"
        android:text="5"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/correct_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_answered_tv"
        android:layout_marginTop="15dp"
        android:text="Correct Ansewer"
        android:textSize="25sp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/correct_answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/correct_answer_tv"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/correct_answer_tv"
        android:text="5"
        android:textColor="#000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/correct_answer_tv"
        android:layout_marginTop="15dp"
        android:text="@string/play_again"
        android:textColor="#000"
        android:padding="15dp"
        android:background="#97e5ec"
        android:fontFamily="@string/hello_blank_fragment"
        android:onClick="onClickPlayAgainButton" />

    <Button
        android:id="@+id/correct_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/play_again_button"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:text="@string/correct_answer"
        android:textColor="#000"
        android:background="#97e5ec"
        android:padding="15dp"
        android:fontFamily="@string/hello_blank_fragment"
        android:onClick="onClickCorrectAnswer"/>

</RelativeLayout>
